# Deepfake-Detector

./: .env.example  .gitattributes  .gitignore  .infisical.json  CLAUDE.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-push.yml  ci.yml  security-scan.yml
audio-detector/: .dockerignore  .gitignore  Dockerfile  eval.py  pyproject.toml
audio-detector/src/: consumer.py  inference.py  main.py
audio-detector/tests/: test_consumer.py  test_health.py  test_inference_extract.py
audio-detector/training/: datasets.py  export_onnx.py  prep_cache.py  quantize_w2v2.py  train_mel.py  train_w2v2.py
docs/: observability.md
docs/adr/: 0001-keycloak-realm-as-code.md
docs/contracts/: amqp-messages.md  analysis-statuses.md  metrics.md  object-storage.md  rest-api.md
docs/optimization-reports/: backend-cache-index-pool.md  d4-replication.md
eureka-server/: Dockerfile  pom.xml
file-service/: Dockerfile  pom.xml
file-service/src/main/resources/: application.yaml
frontend/: .env.example  .gitignore  .prettierignore  commitlint.config.js  eslint.config.js  frontend_instructions.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/.husky/: .gitattributes  commit-msg  pre-commit
frontend/public/: silent-check-sso.html
frontend/src/: App.tsx  index.tsx  main.app.tsx
frontend/src/api/: analysis.ts  client.ts  errors.test.ts  errors.ts  files.ts  stream.ts  types.ts
frontend/src/auth/: initKeycloak.ts  keycloak.ts
frontend/src/components/ErrorBoundary/: ErrorBoundary.tsx
frontend/src/components/layout/: .gitkeep  Layout.module.css  Layout.tsx
frontend/src/components/layout/Header/: Header.module.css  Header.tsx
frontend/src/components/ui/: .gitkeep
frontend/src/components/ui/Alert/: Alert.module.css  Alert.test.tsx  Alert.tsx
frontend/src/components/ui/AudioPlayer/: AudioPlayer.module.css  AudioPlayer.tsx
frontend/src/components/ui/Badge/: Badge.module.css  Badge.test.tsx  Badge.tsx
frontend/src/components/ui/Button/: Button.module.css  Button.test.tsx  Button.tsx
frontend/src/components/ui/Card/: Card.module.css  Card.tsx  index.ts
frontend/src/components/ui/EmptyState/: EmptyState.module.css  EmptyState.test.tsx  EmptyState.tsx
frontend/src/components/ui/FormField/: FormField.module.css  FormField.tsx  fieldContext.ts  index.ts
frontend/src/components/ui/Input/: Input.module.css  Input.tsx
frontend/src/components/ui/LinkButton/: LinkButton.tsx
frontend/src/components/ui/ProgressBar/: ProgressBar.module.css  ProgressBar.test.tsx  ProgressBar.tsx
frontend/src/components/ui/RadialGauge/: RadialGauge.module.css  RadialGauge.tsx  index.ts
frontend/src/components/ui/Spinner/: Spinner.module.css  Spinner.tsx
frontend/src/components/ui/VideoPlayer/: VideoPlayer.module.css  VideoPlayer.tsx
frontend/src/config/: env.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx  auth-context.ts  theme-context.ts
frontend/src/hooks/: .gitkeep
frontend/src/keycloak-theme/: kc.gen.tsx
frontend/src/keycloak-theme/login/: KcPage.tsx  Template.tsx  theme.module.css
frontend/src/keycloak-theme/login/pages/: Login.tsx  Register.tsx
frontend/src/pages/AnalysisResult/: AnalysisResult.module.css  AnalysisResult.tsx  progress-steps.test.ts  progress-steps.ts  result-utils.ts  use-analysis-stream.ts  use-gradcam-images.ts
frontend/src/pages/AnalysisResult/components/: AnalysisStatusState.tsx  AudioTimeline.tsx  GradcamSection.tsx  LiveProgress.tsx  MediaPreview.tsx  ModalitySection.tsx  ReportPdfButton.tsx  ResultHeader.tsx  SummarySection.tsx  VerdictHero.tsx
frontend/src/pages/Dashboard/: Dashboard.module.css  Dashboard.tsx
frontend/src/pages/Dashboard/components/: AnalysisRow.tsx  DashboardEmpty.tsx  RowOutcome.test.tsx  RowOutcome.tsx  StatCard.tsx
frontend/src/pages/History/: History.module.css  History.tsx  filters.test.ts  filters.ts  use-history.test.ts  use-history.ts
frontend/src/pages/History/components/: FilterSelect.tsx  (+7 more)
frontend/src/pages/Login/: Login.module.css  Login.tsx
frontend/src/pages/PageNotFound/: PageNotFound.tsx
frontend/src/pages/Playground/: Playground.module.css  Playground.tsx
frontend/src/pages/Profile/: Profile.module.css  Profile.tsx
frontend/src/pages/Upload/: Upload.module.css  Upload.tsx  upload-utils.test.ts  upload-utils.ts  use-analysis-flow.test.ts  use-analysis-flow.ts  use-file-drop.test.ts  use-file-drop.ts
frontend/src/routes/: AppRouter.tsx  ProtectedRoute.tsx  RouteError.tsx
frontend/src/styles/: .gitkeep  global.css  tokens.css
frontend/src/types/: .gitkeep
frontend/src/utils/: .gitkeep  correlationId.test.ts  correlationId.ts
frontend/src/websocket/: stomp.ts
frontend/tests/e2e/: .gitkeep
gateway/: Dockerfile  pom.xml
gateway/src/main/resources/: application.yaml
infra/: INFISICAL.md
infra/alloy/: config.alloy
infra/grafana/dashboards/: deepfake-business.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: datasources.yaml
infra/keycloak/: README.md  realm-export.json
infra/loki/: loki-config.yaml
infra/postgres/init/: 01-init-fileservice-db.sh
infra/prometheus/: prometheus.yml
infra/rabbitmq/: rabbitmq.conf
infra/seaweedfs/: bucket-init.sh  init.sh  s3.json.tmpl
infra/tempo/: tempo.yaml
load-tests/bench/: README.md  bench-http.ps1  explain-history.sql  seed-analyses.sql
load-tests/jmeter/: .gitignore  README.md  file-service-upload.jmx  generate-sample.ps1  generate-sample.sh  run-loadtest.ps1
orchestrator/: Dockerfile  pom.xml
orchestrator/src/main/resources/: application.yaml
video-detector/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
video-detector/src/: consumer.py  inference.py  main.py  tracing.py  utils.py
video-detector/tests/: test_consumer.py  test_health.py  test_utils.py
video-detector/training/: README.md  datasets.py  eval.py  export_onnx.py  gradcam.py  grid_results.csv  grid_search.py  make_dummy_cache.py  model.py  prep_cache.py  requirements.txt  train.py
(+164 files in other folders)
