[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepfake-aduio-detector"
version = "0.1.0"
description = "Audio Detector Service for Deepfakes"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.*",
    "uvicorn[standard]==0.46.*",
    "pika==1.4.*",
    "pydantic==2.13.*",
    "prometheus-client==0.25.*",
    "structlog==25.*",
    "boto3==1.42.*",
    "lightning==2.5.0",
    "audiomentations>=0.37",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "torch==2.12.0",
    "torchaudio==2.11.0",
    "torchvision==0.27.0",
    "onnx",
    "onnxruntime",
    "transformers<4.44.0",
    "redis",
    "matplotlib"
]

# This image is inference-only and runs entirely on CPU (ONNX CPUExecutionProvider +
# torch map_location='cpu'). Training is done on the host, outside the image. Pulling
# CPU wheels instead of cu121 drops ~4.5 GB (nvidia/* CUDA libs + triton) from the image.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
