[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepfake-video-detector"
version = "0.1.0"
description = "Video Detector Service for Deepfakes"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.*",
    "uvicorn[standard]==0.46.*",
    "pika==1.4.*",
    "pydantic==2.13.*",
    "prometheus-client==0.25.*",
    "structlog==25.*",
    "boto3==1.42.*",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Consumer tests need no ML stack (the video pipeline is still a stub):
#   uv pip install pika structlog prometheus-client opentelemetry-sdk pytest && pytest tests
[dependency-groups]
dev = ["pytest>=8"]

[tool.ruff]
target-version = "py312"
line-length = 100
