[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepfake-video-detector"
version = "0.1.0"
description = "Video Detector Service for Deepfakes"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.*",
    "uvicorn[standard]==0.46.*",
    "pika==1.4.*",
    "pydantic==2.13.*",
    "prometheus-client==0.25.*",
    "structlog==25.*",
    "boto3==1.42.*",
    "redis",
    "opentelemetry-sdk>=1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.30",
    # --- ML stack (inferencja CPU-only: ONNX CPUExecutionProvider + torch map_location=cpu) ---
    "torch==2.12.0",
    "lightning==2.5.0",
    "timm>=1.0",
    "onnxruntime==1.25.*",
    "opencv-python-headless>=4.10",
    "numpy",
    "insightface>=0.7.3",   # RetinaFace buffalo_l (detection-only) + norm_crop
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Consumer tests stub src.inference, so they run without the ML stack:
#   uv pip install pika structlog boto3 redis prometheus-client opentelemetry-sdk fastapi pytest && pytest tests
[dependency-groups]
dev = ["pytest>=8"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" }
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
